Adding admin product images page.

--- a/themes/bootstrap/templates/admin/product/navigation.twig
+++ b/themes/bootstrap/templates/admin/product/navigation.twig
@@ -4,6 +4,10 @@
     {
         'name': 'Edit',
         'url' : routeUrl('admin.product.edit', {'productId': product.id.getHex()})
+    },
+    {
+        'name': 'Images',
+        'url' : routeUrl('admin.product.images', {'productId': product.id.getHex()})
     }
 ] %}
 
