--- a/themes/bootstrap/templates/admin/product/images.twig
+++ b/themes/bootstrap/templates/admin/product/images.twig
@@ -20,36 +20,38 @@
                             </div>
                             <br />
                             <p>
-                                <?php if ($image->path == $product->defaultImage) { ?>
+                                {% if image.path == product.defaultImage %}
                                     <div class="label label-primary pull-right">Default</div>
 
-                                    <?=View::factory(
-                                        'admin/unset_default_image_form',
-                                        [
-                                            'setDefaultAction' => 'admin/product/set_default_image/' . $product->id->getHex(),
-                                        ]
-                                    )?>
-                                <?php } else { ?>
-                                    <?=View::factory(
-                                        'admin/set_default_image_form',
-                                        [
-                                            'setDefaultAction' => 'admin/product/set_default_image/' . $product->id->getHex(),
-                                            'path' => $image->path
-                                        ]
-                                    )?>
-                                <?php } ?>
+                                    <form action="{{ routeUrl('admin.product.unset-default-image') }}"
+                                          method="post"
+                                          class="form-inline">
+                                        {{ form.csrf() }}
+                                        {{ form.hidden('productId', product.id.hex) }}
+
+                                        <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-minus-circle"></i> Unset Default</button>
+                                    </form>
+                                {% else %}
+                                    <form action="{{ routeUrl('admin.product.set-default-image') }}"
+                                          method="post"
+                                          class="form-inline">
+                                        {{ form.csrf() }}
+                                        {{ form.hidden('productId', product.id.hex) }}
+
+                                        <button type="submit" class="btn btn-default btn-xs">Set Default</button>
+                                    </form>
+                                {% endif %}
 
                                 <br>
-                                <?=Form::open('admin/product/delete_image/' . $product->id->getHex(), [
-                                    'method' => 'POST',
-                                    'id' => 'delete-image-form',
-                                    'class' => 'form',
-                                ])?>
-                                    <?=Form::csrf()?>
+                                <form action="{{ routeUrl('admin.product.delete-image') }}"
+                                      method="post"
+                                      class="form">
+                                    {{ form.csrf() }}
+                                    {{ form.hidden('productId', product.id.hex) }}
+                                    {{ form.hidden('imageId', image.id.hex) }}
 
-                                    <?=Form::hidden('id', $image->id->getHex())?>
-                                    <button type="submit" class="btn btn-danger btn-xs"><i class="glyphicon glyphicon-remove-sign"></i> Remove</button>
-                                <?=Form::close()?>
+                                    <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Remove</button>
+                                </form>
                             </p>
                         </div>
                     </div>
