Adding tag edit page.

--- a/themes/bootstrap/templates/admin/product/edit.twig
+++ b/themes/bootstrap/templates/admin/product/edit.twig
@@ -173,6 +173,11 @@
                         </div>
 
                         <div class="well">
+                            <div class="pull-right text-muted text-right">
+                                <span title="Created">{{ product.createdFormatted }}<?</span><br>
+                                <span title="Updated">{{ product.updatedFormatted }}<?</span><br>
+                            </div>
+
                             <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
                                 <i class="fa fa-check-circle"></i> Save
                             </button>
