--- a/themes/bootstrap/templates/admin/product/parts/set-default-image.twig
+++ b/themes/bootstrap/templates/admin/product/parts/set-default-image.twig
@@ -15,6 +15,7 @@
           class="form-inline">
         {{ form.csrf() }}
         {{ form.hidden('productId', product.id.hex) }}
+        {{ form.hidden('imageId', image.id.hex) }}
 
         <button type="submit" class="btn btn-default btn-xs">Set Default</button>
     </form>
