--- a/themes/bootstrap/templates/admin/product/actions.twig
+++ b/themes/bootstrap/templates/admin/product/actions.twig
@@ -2,6 +2,10 @@
 
 <div class="row">
     <div class="col-sm-6">
+        <img src="{{ productImageUrl(product) }}"
+             width="35"
+             height="35"
+             style="margin: 0 10px"/>
         Product - {{ product.name }}
         <br>
         <br>
