--- a/themes/bootstrap/templates/admin/tag/parts/actions.twig
+++ b/themes/bootstrap/templates/admin/tag/parts/actions.twig
@@ -2,6 +2,10 @@
 
 <div class="row">
     <div class="col-sm-6">
+        <img src="{{ tagImageUrl(tag) }}"
+             width="35"
+             height="35"
+             style="margin: 0 10px"/>
         Tag - {{ tag.name }}
         <br>
         <br>
