--- a/themes/bootstrap/templates/admin/option/index.twig
+++ b/themes/bootstrap/templates/admin/option/index.twig
@@ -1,5 +1,6 @@
 {# @var options \inklabs\kommerce\EntityDTO\OptionDTO[] #}
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
+{# @var queryString string #}
 {% extends 'layout/base-admin.twig' %}
 
 {% block pageTitle %}Options{% endblock %}
@@ -12,7 +13,7 @@
                 <form action="{{ routeUrl('admin.option') }}"
                       method="get"
                       class="form-search">
-                    {% embed 'helper/search-bar.twig' with {'placeholder': 'Search Name/Email'} only %}{% endembed %}
+                    {% embed 'helper/search-bar.twig' with {'placeholder': 'Search Name/Email', 'queryString': queryString} only %}{% endembed %}
                 </form>
 
                 {{ paginate.detailed(pagination) }}
