Adding admin product options.

--- a/themes/bootstrap/templates/admin/product/navigation.twig
+++ b/themes/bootstrap/templates/admin/product/navigation.twig
@@ -12,6 +12,10 @@
     {
         'name': 'Tags',
         'url' : routeUrl('admin.product.tags', {'productId': product.id.hex})
+    },
+    {
+        'name': 'Options',
+        'url' : routeUrl('admin.product.options', {'productId': product.id.hex})
     }
 ] %}
 
