Adding admin tag options.

--- a/themes/bootstrap/templates/admin/product/options.twig
+++ b/themes/bootstrap/templates/admin/product/options.twig
@@ -10,13 +10,13 @@
 
         <div class="row">
             <div class="col-sm-12">
-                {% include 'admin/product/parts/option-product-list.twig' with {'optionProducts': product.optionProducts} only %}
+                {% include 'admin/parts/option-product-list.twig' with {'optionProducts': product.optionProducts} only %}
 
                 <hr />
                 <h2>Tag Options:</h2>
 
-                {% include 'admin/product/parts/option-list.twig' with {'options': product.options} only %}
-                {% include 'admin/product/parts/text-option-list.twig' with {'textOptions': product.textOptions} only %}
+                {% include 'admin/parts/option-list.twig' with {'options': product.options} only %}
+                {% include 'admin/parts/text-option-list.twig' with {'textOptions': product.textOptions} only %}
             </div>
         </div>
     </div>
