Adding admin product quantity discounts.

--- a/themes/bootstrap/templates/admin/product/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/product/parts/navigation.twig
@@ -16,6 +16,10 @@
     {
         'name': 'Options',
         'url' : routeUrl('admin.product.options', {'productId': product.id.hex})
+    },
+    {
+        'name': 'Quantity Discounts',
+        'url' : routeUrl('admin.product.quantity-discounts', {'productId': product.id.hex})
     }
 ] %}
 
