--- a/themes/bootstrap/templates/admin/promotion/catalog-promotion/index.twig
+++ b/themes/bootstrap/templates/admin/promotion/catalog-promotion/index.twig
@@ -1,5 +1,6 @@
-{# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
+{# @var catalogPromotions \inklabs\kommerce\EntityDTO\CatalogPromotionDTO[] #}
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
+{# @var queryString string #}
 {% extends 'layout/base-admin.twig' %}
 
 {% block pageTitle %}Catalog Promotion{% endblock %}
@@ -8,12 +9,89 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1>Catalog Promotion</h1>
+                <div class="pull-right">
+                    <a href="{{ routeUrl('admin.catalog-promotion.new') }}"
+                       class="btn btn-success btn-xs">
+                        <i class="fa fa-plus-circle"></i> New Catalog Promotion
+                    </a>
+                </div>
+
+                <h1>Catalog Promotions</h1>
+                <form action="{{ routeUrl('admin.catalog-promotion') }}"
+                      method="get"
+                      class="form-search">
+                    {% embed 'helper/search-bar.twig' with {'placeholder': 'Search Name', 'queryString': queryString} only %}{% endembed %}
+                </form>
 
                 {{ paginate.detailed(pagination) }}
 
-                <h2>TODO</h2>
-
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Code</th>
+                            <th>Name</th>
+                            <th>Tag</th>
+                            <th>Discount</th>
+                            <th>Redemptions</th>
+                            <th>Min Order</th>
+                            <th>Max Order</th>
+                            <th>Period</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for catalogPromotion in catalogPromotions %}
+                            <tr>
+                                <td>
+                                    <a href="{{ adminCatalogPromotionUrl(catalogPromotion) }}">
+                                        {{ catalogPromotion.code }}
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="{{ adminCatalogPromotionUrl(catalogPromotion) }}">
+                                        {{ catalogPromotion.name }}
+                                    </a>
+                                </td>
+                                <td>
+                                    {% if catalogPromotion.tag is null %}
+                                        <span class="text-muted small">[none]</span>
+                                    {% else %}
+                                        {{ catalogPromotion.tag.name }}
+                                    {% endif %}
+                                </td>
+                                <td>{{ catalogPromotion | displayPromotionValue }}</td>
+                                <td>
+                                    {{ catalogPromotion.redemptions }} of
+                                    {% if catalogPromotion.maxRedemptions is null %}
+                                        <span class="text-muted small">[unlimited]</span>
+                                    {% else %}
+                                        {{ catalogPromotion.maxRedemptions }}
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if catalogPromotion.minOrderValue is null %}
+                                        <span class="text-muted small">[no minimum]</span>
+                                    {% else %}
+                                        {{ catalogPromotion.minOrderValue | displayPrice }}
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if catalogPromotion.maxOrderValue is null %}
+                                        <span class="text-muted small">[no maximum]</span>
+                                    {% else %}
+                                        {{ catalogPromotion.maxOrderValue | displayPrice }}
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {{ catalogPromotion.start | formatDate }}
+                                    -
+                                    {{ catalogPromotion.end | formatDate }}
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr><td colspan="100%">No catalog promotions</td></tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
