--- a/themes/bootstrap/templates/helper/billing-address.twig
+++ b/themes/bootstrap/templates/helper/billing-address.twig
@@ -10,14 +10,14 @@
         n/a
     {% else %}
         {% if address.fullName is not empty %}
-            {{ address.fullName }}
+            {{ address.fullName }}<br>
         {% endif %}
         {% if address.company is not empty %}
-            {{ address.company }}
+            {{ address.company }}<br>
         {% endif %}
-        {{ address.address1 }}
+        {{ address.address1 }}<br>
         {% if address.address2 is not empty %}
-            {{ address.address2 }}
+            {{ address.address2 }}<br>
         {% endif %}
 
         {{ address.city }}, {{ address.state }} {{ postalCode }}<br>
