--- a/themes/bootstrap/templates/admin/order/shipments.twig
+++ b/themes/bootstrap/templates/admin/order/shipments.twig
@@ -9,6 +9,30 @@
 
         <div class="row">
             <div class="col-sm-12">
+                <div class="well">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <strong>Shipping Address</strong>
+                            {% include 'helper/billing-address.twig' with {'address': order.shippingAddress} only %}
+                        </div>
+                        <div class="col-sm-4">
+                            <strong>Billing Address</strong>
+                            {% include 'helper/billing-address.twig' with {'address': order.billingAddress} only %}
+                        </div>
+                        <div class="col-sm-4">
+                            <strong>Chosen Shipping Option</strong>
+                            <div>
+                                {% include 'helper/order-shipment-rate.twig' with {'shipmentRate': order.shipmentRate} only %}
+                                <?=View::factory('admin/order/shipment_rate')?>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12">
                 {% for shipment in order.shipments %}
                     <div class="row shipment-row">
                         <div class="col-sm-12">
