--- a/themes/bootstrap/templates/admin/coupon/edit.twig
+++ b/themes/bootstrap/templates/admin/coupon/edit.twig
@@ -128,6 +128,36 @@
                                 </div>
                             </div>
                             <div class="row form-group">
+                                <label for="coupon-flagFreeShipping" class="control-label col-sm-3">
+                                    Flag Free Shipping
+                                </label>
+                                {{ form.checkbox(
+                                    'coupon[flagFreeShipping]',
+                                    coupon.flagFreeShipping,
+                                    'coupon-flagFreeShipping'
+                                ) }}
+                            </div>
+                            <div class="row form-group">
+                                <label for="coupon-reducesTaxSubtotal" class="control-label col-sm-3">
+                                    Reduces Tax Subtotal
+                                </label>
+                                {{ form.checkbox(
+                                    'coupon[reducesTaxSubtotal]',
+                                    coupon.reducesTaxSubtotal,
+                                    'coupon-reducesTaxSubtotal'
+                                ) }}
+                            </div>
+                            <div class="row form-group">
+                                <label for="coupon-canCombineWithOtherCoupons" class="control-label col-sm-3">
+                                    Can Combine With Other Coupons
+                                </label>
+                                {{ form.checkbox(
+                                    'coupon[canCombineWithOtherCoupons]',
+                                    coupon.canCombineWithOtherCoupons,
+                                    'coupon-canCombineWithOtherCoupons'
+                                ) }}
+                            </div>
+                            <div class="row form-group">
                                 <label class="control-label col-sm-3" for="coupon-start">Start</label>
                                 <div class="date datetimepicker col-sm-3">
                                     <div class="input-group">
