Admin edit tag images. Closes https://github.com/inklabs/kommerce-core/issues/67

--- a/themes/bootstrap/templates/admin/product/images.twig
+++ b/themes/bootstrap/templates/admin/product/images.twig
@@ -23,7 +23,7 @@
                                 {% include 'admin/product/parts/set-default-image.twig' %}
 
                                 <br>
-                                <form action="{{ routeUrl('admin.product.delete-image') }}"
+                                <form action="{{ routeUrl('admin.product.remove-image') }}"
                                       method="post"
                                       class="form">
                                     {{ form.csrf() }}
