--- a/themes/bootstrap/templates/admin/tag/parts/option-list.twig
+++ b/themes/bootstrap/templates/admin/tag/parts/option-list.twig
@@ -1,4 +1,5 @@
 {# @var options \inklabs\kommerce\EntityDTO\OptionDTO[] #}
+{# @var tag \inklabs\kommerce\EntityDTO\TagDTO[] #}
 <h3>Options</h3>
 <table class="table table-condensed">
     <thead>
@@ -6,6 +7,9 @@
             <th>Name</th>
             <th>Description</th>
             <th>Sort Order</th>
+            {% if tag is defined %}
+                <th>Actions</th>
+            {% endif %}
         </tr>
     </thead>
     <tbody>
@@ -20,6 +24,19 @@
                     </div>
                 </td>
                 <td>{{ option.sortOrder }}</td>
+                {% if tag is defined %}
+                    <td>
+                        <form action="{{ routeUrl('admin.tag.remove-option') }}"
+                              method="post"
+                              class="form">
+                            {{ form.csrf() }}
+                            {{ form.hidden('tagId', tag.id.hex) }}
+                            {{ form.hidden('optionId', option.id.hex) }}
+
+                            <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-remove"></i></button>
+                        </form>
+                    </td>
+                {% endif %}
             </tr>
         {% else %}
             <tr><td colspan="100%">No options</td></tr>
