--- a/themes/bootstrap/templates/admin/tag/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/tag/parts/navigation.twig
@@ -12,6 +12,10 @@
     {
         'name': 'Options',
         'url' : routeUrl('admin.tag.options', {'tagId': tag.id.hex})
+    },
+    {
+        'name': 'Products',
+        'url' : routeUrl('admin.tag.products', {'tagId': tag.id.hex})
     }
 ] %}
 
