--- a/themes/bootstrap/templates/admin/product/index.twig
+++ b/themes/bootstrap/templates/admin/product/index.twig
@@ -24,38 +24,7 @@
                 </form>
 
                 {{ paginate.detailed(pagination) }}
-
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <td></td>
-                            <th>SKU</th>
-                            <th>Name</th>
-                            <th>Price</th>
-                            <th>Qty</th>
-                            <th>Active</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for product in products %}
-                            <tr>
-                                <td>
-                                    <a href="{{ adminProductUrl(product) }}">
-                                        <img src="{{ productImageUrl(product) }}"
-                                             width="50"
-                                             height="50"
-                                             style="width: 50px; height: 50px;">
-                                    </a>
-                                </td>
-                                <td>{{ product.sku }}</td>
-                                <td><a href="{{ adminProductUrl(product) }}">{{ product.name }}</a></td>
-                                <td>{{ product.unitPrice | displayPrice }}</td>
-                                <td>{{ product.quantity }}</td>
-                                <td>{{ product.isActive ? 'yes' : 'no' }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {% include 'admin/product/parts/product-list.twig' with {'products': products} only %}
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
