--- a/themes/bootstrap/templates/admin/tag/products.twig
+++ b/themes/bootstrap/templates/admin/tag/products.twig
@@ -1,45 +1,45 @@
-{# @var product \inklabs\kommerce\EntityDTO\ProductDTO #}
+{# @var tag \inklabs\kommerce\EntityDTO\TagDTO #}
 {% extends 'layout/base-admin.twig' %}
 
-{% block pageTitle %}Product Tags - {{ product.name }}{% endblock %}
+{% block pageTitle %}Tag Products - {{ tag.name }}{% endblock %}
 
 {% block content %}
     <div class="container">
 
-        {% include 'admin/product/parts/header.twig' %}
+        {% include 'admin/tag/parts/header.twig' %}
 
         <div class="row">
             <div class="col-sm-12">
                 <br>
 
-                {% embed 'admin/tag/parts/tag-list.twig' with {'tags': product.tags} %}
+                {% embed 'admin/product/parts/product-list.twig' with {'products': tag.products} %}
                     {% block thead %}
                         <th>Actions</th>
                     {% endblock %}
                     {% block tbody %}
                         <td>
-                            <form action="{{ routeUrl('admin.product.remove-tag') }}"
+                            <form action="{{ routeUrl('admin.tag.remove-product') }}"
                                   method="post"
                                   class="form">
                                 {{ form.csrf() }}
-                                {{ form.hidden('productId', product.id.hex) }}
                                 {{ form.hidden('tagId', tag.id.hex) }}
+                                {{ form.hidden('productId', product.id.hex) }}
 
-                                <button type="submit" class="btn btn-danger btn-xs pull-right"><i class="fa fa-minus"></i></button>
+                                <button type="submit" class="btn btn-danger btn-xs" title="Remove Product"><i class="fa fa-minus"></i></button>
                             </form>
                         </td>
                     {% endblock %}
                 {% endembed %}
 
-                <h4>Add Tag:</h4>
-                <form action="{{ routeUrl('admin.product.add-tag') }}"
+                <h4>Add Product:</h4>
+                <form action="{{ routeUrl('admin.tag.add-product') }}"
                       method="post">
                     {{ form.csrf() }}
-                    {{ form.hidden('productId', product.id.hex) }}
+                    {{ form.hidden('tagId', tag.id.hex) }}
 
                     <div class="input-group col-sm-4">
                         <input type="text"
-                               name="tagId"
+                               name="productId"
                                value=""
                                class="form-control typeahead"/>
 
